// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link A should handle bool target 1`] = `
<A
  id="123"
  onClick={[Function]}
  target={false}
  title="Test"
  to="/"
>
  <a
    href="/"
    id="123"
    onClick={[Function]}
    target={null}
    title="Test"
  >
    <p>
      Children
    </p>
  </a>
</A>
`;

exports[`Link should handle arrows 1`] = `
<Link
  arrow="back"
  className="testClassName"
  onClick={[Function]}
  style="blue"
  to="/"
>
  <Link
    className="link blue testClassName"
    onClick={[Function]}
    replace={false}
    to="/"
  >
    <a
      className="link blue testClassName"
      href="/"
      onClick={[Function]}
    >
      <p>
        Children
      </p>
      <Icon
        className="arrow"
        icon="back"
      />
    </a>
  </Link>
</Link>
`;

exports[`Link should handle paths 1`] = `
<Link
  className="testClassName"
  onClick={[Function]}
  style="blue"
  to={
    Object {
      "pathname": "/",
    }
  }
>
  <Link
    className="link blue testClassName"
    onClick={[Function]}
    replace={false}
    to={
      Object {
        "pathname": "/",
      }
    }
  >
    <a
      className="link blue testClassName"
      href="/"
      onClick={[Function]}
    >
      <p>
        Children
      </p>
    </a>
  </Link>
</Link>
`;

exports[`Link should handle target 1`] = `
<Link
  className="testClassName"
  newTab={true}
  onClick={[Function]}
  style="blue"
  to="/"
>
  <Link
    className="link blue testClassName"
    onClick={[Function]}
    replace={false}
    target="_blank"
    to="/"
  >
    <a
      className="link blue testClassName"
      href="/"
      onClick={[Function]}
      target="_blank"
    >
      <p>
        Children
      </p>
    </a>
  </Link>
</Link>
`;

exports[`Link should render correctly 1`] = `
<Link
  className="testClassName"
  onClick={[Function]}
  style="blue"
  to="/"
>
  <Link
    className="link blue testClassName"
    onClick={[Function]}
    replace={false}
    to="/"
  >
    <a
      className="link blue testClassName"
      href="/"
      onClick={[Function]}
    >
      <p>
        Children
      </p>
    </a>
  </Link>
</Link>
`;

exports[`Link should render correctly 2`] = `
<A
  id="123"
  onClick={[Function]}
  target="_blank"
  title="Test"
  to="/"
>
  <a
    href="/"
    id="123"
    onClick={[Function]}
    target="_blank"
    title="Test"
  >
    <p>
      Children
    </p>
  </a>
</A>
`;
